Opened 3 years ago
Closed 3 years ago
#17766 closed bug (fixed)
kernel crash on latest nightly
Reported by: | jason123santa | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta4 |
Component: | Drivers/Network/nforce | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | #17763 | Blocking: | |
Platform: | All |
Description (last modified by )
I am getting kernel crashes on latest nightly. It works in a vm but on real hardware it goes to a kernel crash. Images provided
Attachments (4)
Change History (24)
comment:1 by , 3 years ago
Description: | modified (diff) |
---|
by , 3 years ago
Attachment: | mKwhIfAOQ4OM6Coyn7BY3A.jpg added |
---|
by , 3 years ago
Attachment: | kJzXEw1-TPGTrMP3YHJ-yg.jpg added |
---|
comment:2 by , 3 years ago
Blocked By: | 17763 added |
---|---|
Component: | - General → Drivers/Network/nforce |
comment:3 by , 3 years ago
(I am presuming this is memory corruption related to the jumbo-frames changes.)
comment:4 by , 3 years ago
It could be related to the jumbo frames changes. Its an issue with only some network devices because 141 boots just fine on my laptop with a broadcom Ethernet boots just fine.
comment:5 by , 3 years ago
Yeah, it probably is. I think I might have an idea about that.
How much RAM does this system have?
comment:7 by , 3 years ago
Can you post a syslog of a successful boot on the device that fails with ..141?
comment:9 by , 3 years ago
Replying to jason123santa:
Where would I get a syslog of the boot?
You can find the syslog
file under the following directory: /boot/system/var/log/
(or /var/log/
, that works too, as in > cp /var/log/syslog ~/syslog.ticket-17766
).
The syslog.old
one contains previous kernel messages (gets created when syslog
reaches certain size, 512 KB, IIRC).
by , 3 years ago
Attachment: | syslog.ticket-17766 added |
---|
comment:14 by , 3 years ago
OK. I disabled jumbo MTUs for this driver in hrev56160. See if the problem goes away after that.
comment:16 by , 3 years ago
Actually this may be really related to the NVIDIA driver. Please retest after hrev56163.
comment:18 by , 3 years ago
Which hrev, please? Is it indeed >= hrev56163?
Please post a new screenshot on this version.
comment:19 by , 3 years ago
i get to desktop and go to settings and it shows the revision 56177 so it boots just fine
comment:20 by , 3 years ago
Milestone: | Unscheduled → R1/beta4 |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Very good, thanks for your patience in testing!
Very probably related to #17763.